# mulle-cosmopolitan-cc

./: .gitignore  .touch  CMakeLists.txt  CMakePackage.cmake  LICENSE  README.md  RELEASENOTES.md  clang.cosmopolitan  gcc.cosmopolitan  mulle-clang.cosmopolitan  package.json
.mulle/etc/env/: environment-project.sh
.mulle/share/env/: environment-plugin.sh
definition.cosmopolitan.ALL/set/clobber/: CC  COBJC
